# ggplot2_trials_learning

./: .gitignore  DEBUG_DOWNLOAD.md  MAP_TEXT_STYLE_GUIDE.md  README.md  UPDATE_SUMMARY.md  WORKFLOW.md  check_timeseries.md  pyproject.toml  requirements.txt
scripts/: 00_download_data.py  01_etl_data.py  02_hillshade.py  03_make_maps.R  map_text_functions.R
