[project]
name = "commute-clean-air-bivariate-maps"
version = "0.1.0"
description = "Bivariate choropleth maps for Bavaria: Commuting × Air Quality"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "rasterio>=1.3.0",
    "rasterio[plot]>=1.3.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

